move internal libraries to `lib` subpackage; unify menu colors; synchronize all items on login; support item stack components; clean up GUI and registration; use a mixin for ender pull; document